modify css link

--- a/Contact_Us_css.css
+++ b/Contact_Us_css.css
@@ -5,7 +5,7 @@ body {
 }
 
 .header {
-    background-image: url('contact\ Us\ bg\ img.jpg');
+    background-image: url('contact_Us_bg_img.jpg');
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
