--- a/User_login_css.css
+++ b/User_login_css.css
@@ -5,7 +5,7 @@ body {
 }
 
 .container {
-    background-image: url('Login bg img.jpg');
+    background-image: url('Login_bg_img.jpg');
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
