--- a/Contact_Us_css.css
+++ b/Contact_Us_css.css
@@ -55,7 +55,7 @@ input{
     box-sizing: border-box;
 }
 
- select {
+select {
     width: 100%;
     padding: 12px;
     margin-top: 5px;
@@ -82,17 +82,11 @@ textarea {
 button {
     width: 100%;
     padding: 12px;
-    background: #007bff;
+    background: linear-gradient(90deg, #4b6cb7, #182848);
     color: white;
     border: none;
     border-radius: 5px;
     font-size: 16px;
     font-weight: bold;
-    cursor: pointer;
-    transition: background 0.3s ease-in-out;
     margin-top: 15px;
-}
-
-button:hover {
-    background: #0056b3;
 }
